# neural_network

./: .gitattributes  .gitignore  Makefile  bootstrap-docker-venv.sh  bs.md  demo.sh  flake.nix  pyproject.toml  setup.cfg  t
bs/: mlp.py  my_perceptron.py  tictactoe.py
configs/: advanced_network.conf  basic_network.conf  medium_network.conf
pip-cache/bootstrapping-pip/: pip-25.3-py3-none-any.whl
scripts/: apply-commit-convention.py  automate_and_gate.py  benchmark_xor.py  generate_chess_dataset.py  infer_mlp.py  train_tictactoe_mlp.py  train_xor_mlp.py  visualize_results.py
src/analyzer/: __init__.py  data_loader.py  labels.py  modes.py
src/chess_utils/: __init__.py  board_analyzer.py  fen.py
src/generator/: __init__.py  config_loader.py  generator.py  network_builder.py
src/my_torch/: __init__.py  activations.py  losses.py  main.py  optimizer.py
src/my_torch/network/: __init__.py  backprop.py  core.py  forward.py  serialization.py  training.py
src/my_torch/tools/: my_torch_analyzer.py  my_torch_generator.py
