[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_torch_analyzer"
version = "0.0.1"
description = "A clash of kings"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.12"
dependencies = [
  "matplotlib"
]

[project.scripts]
my_torch_analyzer = "src.main:main"

[project.optional-dependencies]
dev = [
  "black",
  "isort"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["src"]
multi_line_output = 3
include_trailing_comma = true
