[metadata]
name = my_torch_analyzer
version = 0.0.1
description = A clash of kings
license = BSD-3-Clause

[options]
include_package_data = True
python_requires = >=3.8
packages = my_torch
package_dir =
  =src
zip_safe = no
install_requires =
    matplotlib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    my_torch_analyzer = my_torch.tools.my_torch_analyzer:main
    my_torch_generator = my_torch.tools.my_torch_generator:main

[options.extras_require]
dev =
    black
    isort

[tool:black]
line-length = 79
target-version = py312

[tool:isort]
profile = black
line_length = 79
known_first_party = src
multi_line_output = 3
include_trailing_comma = true
